manual review